modiflied scrapy.cfg settind

--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,7 +4,7 @@
 # https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = learnscrapy.settings
+default = zhuanqspider.settings
 
 [deploy]
 #url = http://localhost:6800/
